infrastructure/longhorn/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: longhorn
  namespace: longhorn-system
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "Longhorn"
    gethomepage.dev/description: "Distributed block storage"
    gethomepage.dev/group: "Security & Storage"
    gethomepage.dev/icon: "longhorn.png"
    gethomepage.dev/href: "https://longhorn.k8s.darktang3nt.cloud"
    gethomepage.dev/widget.type: "longhorn"
    gethomepage.dev/widget.url: "http://longhorn-frontend.longhorn-system"
spec:
  parentRefs:
    - name: homelab-gateway
      namespace: envoy-gateway-system
  hostnames:
    - "longhorn.k8s.darktang3nt.cloud"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: longhorn-frontend
          namespace: longhorn-system
          port: 80
